# heater_click

./: .gitignore  DEPLOYMENT.md  README.md  README_HF.md  analyze_heater_sounds.py  article_titles.md  convert_audio.py  data_collection_guide.md  download_model.py  example_usage.py  hello.py  improved_data_augmentation.py  labels.txt  pyproject.toml  realtime_mic_detector.py  rename_audio_files.py  requirements.txt  upload_to_hf.py  wav2vec2_architecture.py  wav2vec2_explanation.md  wav2vec2_switch_detector.py  wav2vec2_visual_explanation.py  wechat_article.md
docs/tech-comparison/: README.md  index.html  script.js  styles.css
