[project]
name = "heater-click"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pyaudio>=0.2.14",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers>=4.52.3",
]
